--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "latest",
     "react-avatar": "^5.0.3",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "latest",
